projects/whisper/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whisper
  name: whisper
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: whisper
