projects/whisper/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisper
  namespace: whisper
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`whisper.steffenillium.de`)
    kind: Rule
    services:
    - name: whisper
      port: http
